--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	<button id="btnPrev">Previous</button>
 	<button id="btnNext">Next</button>
 
-	<script src="./js/main.for.js"></script>
+	<script src="./js/main.top.js"></script>
+	<!-- <script src="./js/main.for.js"></script> -->
 	<!-- <script src="./js/main.sibling.js"></script> -->
 </body>
 </html>
